--- a/scss/dependencies/_navbar.scss
+++ b/scss/dependencies/_navbar.scss
@@ -12,7 +12,7 @@
   border-bottom:none;
 }
 
-#header, #header-wrap, #logo img, #header.sticky-header:not(.static-sticky), #header.sticky-header:not(.static-sticky) #header-wrap, #header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img {
+#header, #header-wrap, #logo img, #header.sticky-header:not(.static-sticky), #header.sticky-header:not(.static-sticky) #header-wrap, #header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img, #logo {
   height:100px;
 }
 #header-wrap {
@@ -20,12 +20,17 @@
   background:#FFF;
 }
 
-#logo img {
-  padding:10px 0;
-  @media (max-width:1080px) {
-    padding:14px 0;
-  }
+#logo {
 
+  img {
+    padding: 10px 0;
+    @media (max-width: 1080px) {
+      padding: 14px 0;
+    }
+  }
+  @media (max-width:768px) {
+    text-align:left;
+  }
 }
 
 #header.sticky-header:not(.static-sticky) #primary-menu > ul > li > a {
@@ -76,4 +81,9 @@
 #primary-menu-trigger {
   font-size:25px;
   color:#000;
+  top:25px;
+  @media (max-width:768px) {
+    left:initial;
+    right:0;
+  }
 }
