--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,13 +22,12 @@ h1 {
 
 h2 {
   font-family: $open-sans;
-  font-weight:600;
-  font-size: 77.76px;
   line-height: 88px;
   text-transform:none !important;
 }
 p {
   font-family:$open-sans;
+  margin-bottom:20px;
 }
 .button {
   background: #EA7F19;
