--- a/css/main.css
+++ b/css/main.css
@@ -24406,13 +24406,12 @@ h1 {
 
 h2 {
   font-family: "Open Sans", sans-serif;
-  font-weight: 600;
-  font-size: 77.76px;
   line-height: 88px;
   text-transform: none !important; }
 
 p {
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+  margin-bottom: 20px; }
 
 .button {
   background: #EA7F19;
@@ -24516,17 +24515,21 @@ p {
       left: initial;
       right: 0; } }
 
-.slide-1 {
-  background-image: url("../images/slide-1.jpg");
+.slide-1, .slide-2, .slide-3 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100% 100% !important; }
+
+.slide-1 {
+  background-image: url("../images/slide-1.jpg"); }
   .slide-1 h1 {
     color: #92C717;
-    margin-bottom: 50px; }
+    margin-bottom: 40px; }
   .slide-1 h2 {
     color: #FFF !important;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    font-weight: 600 !important;
+    font-size: 77.76px; }
   .slide-1 .we-love {
     margin-bottom: 5px; }
   .slide-1 p {
@@ -24539,7 +24542,51 @@ p {
     .slide-1 {
       background-position: 75% 100% !important; }
       .slide-1 .slider-caption {
-        margin-top: -90px; } }
+        margin-top: -90px; }
+      .slide-1 p {
+        font-size: 20px; }
+      .slide-1 .button {
+        max-width: 300px; }
+      .slide-1 h1 {
+        font-size: 140px; }
+      .slide-1 h2 {
+        font-size: 68px; } }
+
+.slide-2 {
+  background-image: url("../images/slide-2.jpg"); }
+  .slide-2 h2 {
+    font-size: 54px;
+    font-weight: 900 !important;
+    color: #92C717 !important;
+    line-height: 66.4px;
+    margin-bottom: 0;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6) !important; }
+  .slide-2 .icon-star3 {
+    color: #FFD900;
+    text-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+    font-size: 50px; }
+  .slide-2 .star-set {
+    margin-bottom: 20px; }
+  .slide-2 .patients {
+    margin-bottom: 10px; }
+  .slide-2 p {
+    font-size: 24px;
+    color: #FFFFFF;
+    line-height: 35px;
+    margin-bottom: 30px; }
+  .slide-2 .button {
+    max-width: 250px; }
+  @media (max-width: 1450px) {
+    .slide-2 {
+      background-position: 50% 100% !important; } }
+  @media (max-width: 1200px) {
+    .slide-2 {
+      background-position: 60% 100% !important; }
+      .slide-2 h2 {
+        font-size: 38px;
+        line-height: 50px; }
+      .slide-2 .slider-caption {
+        padding-right: 100px; } }
 
 #slider, .swiper-container, .swiper-slide {
   max-height: 800px; }
