add in mobile background for slider

--- a/css/main.css
+++ b/css/main.css
@@ -24635,4 +24635,7 @@ p {
 #slider, .swiper-container, .swiper-slide {
   max-height: 800px; }
 
+.mobile-slider img {
+  width: 100%; }
+
 /*# sourceMappingURL=main.css.map */
