--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,10 @@ h1 {
 h2 {
   font-family: $open-sans;
   text-transform:none !important;
+  font-weight:600 !important;
+  font-size: 38px;
+  color: #46727C;
+  line-height: 40px;
 }
 h3 {
   font-family:$open-sans;
@@ -33,11 +37,11 @@ h6 {
 p {
   font-family:$open-sans;
   margin-bottom:20px;
+  font-size:18px;
 }
 .button {
   background: #EA7F19;
   border-radius: 7px;
-  border: 1px solid #979797;
   font-family: $lato;
   font-weight:700;
   font-size: 18px;
@@ -50,9 +54,20 @@ p {
   justify-content:center;
   &:hover {
     text-decoration:none;
-    background:#C56B15;
+    background: #ce7016;
     text-shadow:none;
+    color:#FFF !important;
   }
+}
+.phone-slug {
+  a:hover {
+    text-decoration:none;
+    color:inherit;
+  }
+}
+.button-wrap {
+ display:flex;
+  justify-content:center;
 }
 
 
@@ -62,6 +77,7 @@ p {
 
 @import "dependencies/_navbar.scss";
 @import "dependencies/_slides.scss";
+@import "dependencies/_phone-slug.scss";
 
 // End My Dependencies //
 
