--- a/css/main.css
+++ b/css/main.css
@@ -24411,6 +24411,10 @@ h2 {
   font-size: 38px;
   color: #46727C;
   line-height: 40px; }
+  @media (max-width: 480px) {
+    h2 {
+      font-size: 28px;
+      line-height: 35px; } }
 
 h3 {
   font-family: "Open Sans", sans-serif; }
@@ -24459,6 +24463,12 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
+
+section {
+  padding: 60px 0; }
+  @media (max-width: 768px) {
+    section {
+      padding: 30px 0; } }
 
 #header.full-header #primary-menu > ul {
   border-right: none;
@@ -24681,5 +24691,28 @@ p {
       color: #526E6B; }
   .phone-slug .button {
     margin-bottom: 10px; }
+
+.meet-the-doctor {
+  background-image: url("../images/bio.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 30px;
+  background-position-x: 20%; }
+  .meet-the-doctor .row-1 {
+    margin-bottom: 50px; }
+  .meet-the-doctor p {
+    margin-bottom: 50px;
+    color: #424242;
+    font-size: 17px; }
+  @media (max-width: 1200px) {
+    .meet-the-doctor {
+      background-image: none;
+      padding-top: 60px;
+      padding-bottom: 0; }
+      .meet-the-doctor .row-1 {
+        margin-bottom: 0; } }
+  @media (max-width: 768px) {
+    .meet-the-doctor {
+      padding-top: 30px; } }
 
 /*# sourceMappingURL=main.css.map */
