--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,10 @@ h2 {
   font-size: 38px;
   color: #46727C;
   line-height: 40px;
+  @media (max-width:480px) {
+    font-size:28px;
+    line-height:35px;
+  }
 }
 h3 {
   font-family:$open-sans;
@@ -69,6 +73,13 @@ p {
  display:flex;
   justify-content:center;
 }
+section {
+  padding:60px 0;
+  @media (max-width:768px) {
+    padding:30px 0;
+  }
+
+}
 
 
 
@@ -78,6 +89,7 @@ p {
 @import "dependencies/_navbar.scss";
 @import "dependencies/_slides.scss";
 @import "dependencies/_phone-slug.scss";
+@import "dependencies/_meet-the-doctor.scss";
 
 // End My Dependencies //
 
