add in second phone slug with team bio modals

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -99,6 +99,7 @@ section {
 @import "dependencies/_meet-the-doctor.scss";
 @import "dependencies/_meet-the-team.scss";
 @import "dependencies/specials.scss";
+@import "dependencies/_modal.scss";
 
 // End My Dependencies //
 
