--- a/scss/dependencies/_phone-slug.scss
+++ b/scss/dependencies/_phone-slug.scss
@@ -6,6 +6,7 @@
   text-align:center;
   border-bottom:5px solid #57A5B7;
   border-top:5px solid #57A5B7;
+  background-position:50% 50%;
   .row {
     text-align:center;
   }
