--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,7 @@ section {
 @import "dependencies/_meet-the-team.scss";
 @import "dependencies/specials.scss";
 @import "dependencies/_modal.scss";
+@import "dependencies/_reviews.scss";
 
 // End My Dependencies //
 
