--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,6 +101,7 @@ section {
 @import "dependencies/specials.scss";
 @import "dependencies/_modal.scss";
 @import "dependencies/_reviews.scss";
+@import "dependencies/_no-insurance.scss";
 
 // End My Dependencies //
 
