--- a/css/main.css
+++ b/css/main.css
@@ -24470,6 +24470,9 @@ p {
       -ms-flex-pack: center;
           justify-content: center; }
 
+.img-wrap {
+  text-align: center; }
+
 section {
   padding: 60px 0; }
   @media (max-width: 768px) {
@@ -25087,5 +25090,65 @@ h4.modal-title {
 
 .no-insurance-bottom img {
   width: 100%; }
+
+.services {
+  background-image: url("../images/services/cosmetic.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 800px; }
+  .services h2 {
+    font-weight: 900 !important;
+    font-size: 48px; }
+  .services p {
+    font-size: 16px; }
+    .services p a {
+      text-decoration: underline;
+      color: #5F8801; }
+  .services h3 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #46727C; }
+  .services .row-2 {
+    margin-top: 100px; }
+  @media (max-width: 1200px) {
+    .services {
+      height: auto;
+      background: none; }
+      .services .row-2 {
+        margin-top: 0; } }
+  @media (max-width: 991px) {
+    .services h2, .services h3 {
+      font-size: 36px;
+      margin-bottom: 15px; } }
+  @media (max-width: 480px) {
+    .services h2, .services h3 {
+      font-size: 28px;
+      margin-bottom: 15px; } }
+
+.services-two h3 {
+  font-size: 36px;
+  font-weight: 900;
+  color: #46727C;
+  margin-top: 20px;
+  margin-bottom: 10px; }
+
+.services-two p {
+  font-family: "Arimo", sans-serif;
+  font-size: 16px;
+  color: #424242;
+  line-height: 24px; }
+
+.services-two .col-1, .services-two .col-2 {
+  padding: 30px; }
+
+@media (max-width: 1200px) {
+  .services-two {
+    padding: 35px 0; }
+    .services-two .col-1, .services-two .col-2 {
+      padding: 0 10px; }
+    .services-two h3 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-top: 15px; } }
 
 /*# sourceMappingURL=main.css.map */
