finish more services section

--- a/scss/dependencies/_meet-the-team.scss
+++ b/scss/dependencies/_meet-the-team.scss
@@ -15,6 +15,10 @@
     margin-top:15px;
     color:#FFF;
     margin-bottom:0;
+    &:hover {
+      text-decoration:underline;
+      cursor:pointer;
+    }
   }
   .owl-carousel {
    .owl-nav, .owl-prev, .owl-next {
