--- a/css/main.css
+++ b/css/main.css
@@ -24479,6 +24479,9 @@ section {
     section {
       padding: 30px 0; } }
 
+.owl-item:hover {
+  cursor: pointer; }
+
 #header.full-header #primary-menu > ul {
   border-right: none;
   padding-right: 0;
@@ -24748,6 +24751,9 @@ section {
     margin-top: 15px;
     color: #FFF;
     margin-bottom: 0; }
+    .meet-the-team h4:hover {
+      text-decoration: underline;
+      cursor: pointer; }
   .meet-the-team .owl-carousel .owl-nav, .meet-the-team .owl-carousel .owl-prev, .meet-the-team .owl-carousel .owl-next {
     opacity: 1 !important;
     background: #92C717;
@@ -24978,10 +24984,10 @@ h4.modal-title {
 #contact-modal .modal-dialog {
   border-radius: 5px; }
 
-.team-modal h4 {
+.team-modal h4, .service-modal h4 {
   color: #0F6477; }
 
-.team-modal .img-wrap {
+.team-modal .img-wrap, .service-modal .img-wrap {
   margin-bottom: 10px; }
 
 .reviews {
@@ -25115,7 +25121,7 @@ h4.modal-title {
       height: auto;
       background: none; }
       .services .row-2 {
-        margin-top: 0; } }
+        margin-top: 15px; } }
   @media (max-width: 991px) {
     .services h2, .services h3 {
       font-size: 36px;
@@ -25124,6 +25130,9 @@ h4.modal-title {
     .services h2, .services h3 {
       font-size: 28px;
       margin-bottom: 15px; } }
+
+.services-below img {
+  width: 100%; }
 
 .services-two h3 {
   font-size: 36px;
@@ -25150,5 +25159,58 @@ h4.modal-title {
       font-size: 32px;
       font-weight: 700;
       margin-top: 15px; } }
+
+.more-services {
+  background-color: #0F6477; }
+  .more-services h2 {
+    font-size: 44px;
+    font-weight: 900 !important;
+    color: #FFF;
+    margin-bottom: 20px; }
+  .more-services p {
+    font-size: 20px;
+    color: #FFF;
+    margin-bottom: 30px; }
+  .more-services #oc-portfolio-2 .owl-nav, .more-services #oc-portfolio-2 .owl-prev, .more-services #oc-portfolio-2 .owl-next {
+    opacity: 1 !important;
+    top: 42%;
+    background: #92C717;
+    font-weight: 900;
+    font-family: "Open Sans", sans-serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #FFF;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 30px; }
+    .more-services #oc-portfolio-2 .owl-nav:hover, .more-services #oc-portfolio-2 .owl-prev:hover, .more-services #oc-portfolio-2 .owl-next:hover {
+      color: #FFF !important;
+      background: #92C717 !important; }
+  .more-services h4 {
+    font-weight: 600;
+    color: #FFF;
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-size: 24px; }
+    .more-services h4:hover {
+      text-decoration: underline;
+      cursor: pointer; }
+  @media (max-width: 768px) {
+    .more-services h2 {
+      font-size: 36px;
+      margin-bottom: 15px; } }
+  @media (max-width: 480px) {
+    .more-services h2 {
+      font-size: 32px;
+      margin-bottom: 10px; }
+    .more-services p {
+      font-size: 16px; }
+    .more-services h4 {
+      font-size: 18px; } }
 
 /*# sourceMappingURL=main.css.map */
