--- a/scss/dependencies/_services.scss
+++ b/scss/dependencies/_services.scss
@@ -27,7 +27,7 @@
     height:auto;
     background:none;
     .row-2 {
-      margin-top:0;
+      margin-top:15px;
     }
   }
   @media (max-width:991px) {
@@ -43,7 +43,11 @@
     }
   }
 }
-
+.services-below {
+  img {
+    width:100%;
+  }
+}
 .services-two {
   h3 {
     font-size:36px;
@@ -70,6 +74,69 @@
       font-size:32px;
       font-weight:700;
       margin-top:15px;
+    }
+  }
+}
+
+.more-services {
+  h2 {
+    font-size:44px;
+    font-weight:900 !important;
+    color:#FFF;
+    margin-bottom:20px;
+  }
+  p {
+    font-size:20px;
+    color:#FFF;
+    margin-bottom:30px;
+
+  }
+  background-color:#0F6477;
+  #oc-portfolio-2 {
+    .owl-nav, .owl-prev, .owl-next {
+      opacity: 1 !important;
+      top: 42%;
+      background: #92C717;
+      font-weight: 900;
+      font-family: $open-sans;
+      display: flex;
+      color:#FFF;
+      justify-content: center;
+      align-items: center;
+      font-size: 30px;
+      &:hover {
+        color:#FFF !important;
+        background:#92C717 !important;
+      }
+    }
+  }
+  h4 {
+    font-weight:600;
+    color:#FFF;
+    margin-top:20px;
+    margin-bottom:0;
+    font-size:24px;
+    &:hover {
+      text-decoration:underline;
+      cursor:pointer;
+    }
+  }
+  @media (max-width:768px) {
+    h2 {
+      font-size:36px;
+      margin-bottom:15px;
+    }
+  }
+  @media (max-width:480px) {
+    h2 {
+      font-size:32px;
+      margin-bottom:10px;
+    }
+    p {
+      font-size:16px;
+    }
+    h4 {
+      font-size:18px;
     }
   }
 }
