start smile gallery modal

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,6 +111,8 @@ section {
 @import "dependencies/_reviews.scss";
 @import "dependencies/_no-insurance.scss";
 @import "dependencies/_services.scss";
+@import "dependencies/_smile-gallery.scss";
+@import "dependencies/magnific-popup.scss";
 
 // End My Dependencies //
 
