--- a/scss/dependencies/_services.scss
+++ b/scss/dependencies/_services.scss
@@ -37,7 +37,10 @@
     }
   }
   @media (max-width:480px) {
-    h2, h3 {
+    h2 {
+      font-size:32px;
+    }
+    h3 {
       font-size:28px;
       margin-bottom:15px;
     }
