--- a/scss/dependencies/_modal.scss
+++ b/scss/dependencies/_modal.scss
@@ -45,28 +45,29 @@ h4.modal-title {
 
 
 .smile-gallery-modal {
-  .owl-nav, .owl-prev, .owl-next {
-    background:#92C717 !important;
-    opacity:1 !important;
-    color:#FFF !important;
-    &:hover {
-      background:#92C717 !important;
-      color:#FFF !important;
+    .owl-nav, .owl-prev, .owl-next {
+      background-color: #92C717 !important;
+      opacity: 1 !important;
+      color: #FFF !important;
+      &:hover {
+        background-color:#92C717 !important;
+        color: #FFF !important;
+      }
     }
-  }
-  .before-after-wrap {
-    display:flex;
-    padding-left:20px;
-    margin-top:5px;
-    flex-wrap:nowrap;
+    .before-after-wrap {
+      display: flex;
+      padding-left: 20px;
+      margin-top: 5px;
+      flex-wrap: nowrap;
 
+      p {
+        width: 50%;
+        text-align: left;
+
+      }
+    }
     p {
-      width:50%;
-      text-align:left;
-
+      text-align: left;
     }
-  }
-  p {
-    text-align:left;
-  }
+
 }
