--- a/scss/main.scss
+++ b/scss/main.scss
@@ -112,7 +112,9 @@ section {
 @import "dependencies/_no-insurance.scss";
 @import "dependencies/_services.scss";
 @import "dependencies/_smile-gallery.scss";
-@import "dependencies/magnific-popup.scss";
+@import "dependencies/_magnific-popup.scss";
+@import "dependencies/_patient-forms.scss";
+@import "dependencies/_financing.scss";
 
 // End My Dependencies //
 
