--- a/scss/dependencies/_modal.scss
+++ b/scss/dependencies/_modal.scss
@@ -49,6 +49,7 @@ h4.modal-title {
       background-color: #92C717 !important;
       opacity: 1 !important;
       color: #FFF !important;
+      top:20% !important;
       &:hover {
         background-color:#92C717 !important;
         color: #FFF !important;
