--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,6 +115,7 @@ section {
 @import "dependencies/_magnific-popup.scss";
 @import "dependencies/_patient-forms.scss";
 @import "dependencies/_financing.scss";
+@import "dependencies/_location.scss";
 
 // End My Dependencies //
 
