--- a/css/main.css
+++ b/css/main.css
@@ -24991,7 +24991,8 @@ h4.modal-title {
 .smile-gallery-modal .owl-nav, .smile-gallery-modal .owl-prev, .smile-gallery-modal .owl-next {
   background-color: #92C717 !important;
   opacity: 1 !important;
-  color: #FFF !important; }
+  color: #FFF !important;
+  top: 20% !important; }
   .smile-gallery-modal .owl-nav:hover, .smile-gallery-modal .owl-prev:hover, .smile-gallery-modal .owl-next:hover {
     background-color: #92C717 !important;
     color: #FFF !important; }
@@ -25757,5 +25758,102 @@ img.mfp-img {
   @media (max-width: 480px) {
     .financing img {
       max-width: 300px; } }
+
+.gmap, #google-map {
+  height: 600px; }
+  @media (max-width: 768px) {
+    .gmap, #google-map {
+      height: 500px; } }
+  @media (max-width: 480px) {
+    .gmap, #google-map {
+      height: 400px; } }
+
+.location {
+  padding: 10px 0;
+  background: url("../images/footer-bg.png");
+  background-size: cover;
+  background-color: #0F6477;
+  background-repeat: no-repeat; }
+  .location .img-wrap-one {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: -22%;
+    left: 0; }
+  .location a:hover {
+    text-decoration: none; }
+  .location .col-sm-4 {
+    text-align: center;
+    margin: 10px 0;
+    height: 420px; }
+  .location .col-1, .location .col-2 {
+    border-right: 2px solid #FFF; }
+  .location .col-1 h6 {
+    font-size: 22px;
+    margin-bottom: 0;
+    color: #FFF;
+    line-height: 24px; }
+  .location .col-1 .h6-1 {
+    padding-top: 70px; }
+  .location .col-1 p {
+    color: #FFF;
+    font-size: 20px; }
+  .location .col-1 .p-1 {
+    margin-top: 25px;
+    margin-bottom: -5px; }
+  .location .col-1 .p-2 {
+    margin-bottom: 30px; }
+  .location .col-1 .p-3 {
+    font-family: "Arimo", sans-serif;
+    font-size: 20px;
+    color: #92C717;
+    letter-spacing: 0;
+    line-height: 25px;
+    text-decoration: underline;
+    margin-bottom: 40px; }
+    .location .col-1 .p-3 a {
+      color: #92C717; }
+  .location .col-1 .social-wrap {
+    padding-bottom: 70px;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .location .col-1 .social-wrap .social-icon {
+      margin-right: 20px; }
+      .location .col-1 .social-wrap .social-icon:hover {
+        text-decoration: none; }
+  .location .col-2 .img-wrap-two {
+    padding-top: 70px; }
+  .location .col-2 p {
+    color: #FFF; }
+  .location .col-2 .p-1 {
+    margin-top: 20px;
+    font-size: 20px;
+    margin-bottom: 0; }
+  .location .col-2 .p-2 {
+    font-size: 34px;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    margin-bottom: 0; }
+    .location .col-2 .p-2 a {
+      color: #FFF; }
+  .location .col-2 .p-3 {
+    margin-bottom: 25px; }
+    .location .col-2 .p-3 a {
+      color: #FFF; }
+      .location .col-2 .p-3 a:hover {
+        color: #FFF; }
+  .location .col-2 .button-wrap {
+    padding-bottom: 50px; }
+  .location .col-3 h6 {
+    font-size: 22px;
+    margin-bottom: 0;
+    color: #FFF;
+    line-height: 24px;
+    padding-top: 70px; }
 
 /*# sourceMappingURL=main.css.map */
