--- a/css/main.css
+++ b/css/main.css
@@ -25012,6 +25012,52 @@ h4.modal-title {
 .smile-gallery-modal p {
   text-align: left; }
 
+.form-error {
+  color: #D56724;
+  margin: 0 0 20px 0;
+  padding: 0 0 0 30px;
+  display: none; }
+
+button.close {
+  font-size: 50px;
+  margin-top: -10px;
+  color: #000;
+  opacity: 1;
+  border-bottom: 0px; }
+
+h4.modal-title {
+  font-size: 22px;
+  text-transform: capitalize; }
+
+.modal h5 {
+  font-size: 16px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300; }
+
+.modal .custom-btn {
+  width: 100%;
+  letter-spacing: 0; }
+
+.modal-header .close {
+  margin-top: -10px; }
+
+#contact-modal .modal-dialog {
+  border-radius: 5px; }
+
+.form-control {
+  font-size: 16px; }
+
+.contact-modal .button {
+  margin: 0 auto;
+  max-width: 100%;
+  width: 100%; }
+
+.contact-modal .modal-title {
+  font-size: 22px; }
+
+.modal .close:hover {
+  color: #000; }
+
 .reviews {
   background-image: url("../images/reviews-bg.jpg");
   background-size: cover;
@@ -25903,5 +25949,20 @@ img.mfp-img {
         margin-bottom: 40px; }
       .location .col-3 h6 {
         padding-top: 0; } }
+
+#footer {
+  border-top: none; }
+
+#copyrights {
+  background: #033843;
+  color: #FFF;
+  font-size: 16px;
+  font-family: "Arimo", sans-serif; }
+  #copyrights .col_full {
+    margin-bottom: 0; }
+  #copyrights a {
+    color: #FFF; }
+    #copyrights a:hover {
+      color: #FFF; }
 
 /*# sourceMappingURL=main.css.map */
